UI enhancements: Fix image distortion by using repeat-x for the divider

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -190,9 +190,9 @@ a { color: inherit; text-decoration: none; }
   .section-divider {
     height: 24px;
     background-image: url('/src/assets/images/Bar.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center left;
+    background-repeat: repeat-x;
     border: none;
     margin-top: 4rem;
     margin-bottom: 4rem;
